# BizBot

./: .gitignore  README.md
Backend/api/: .env.example
Backend/shared/: README.md
Backend/shared/bizbot_shared/core/: config.py
Backend/shared/bizbot_shared/schemas/: images.py
backend/api/: .env.example  README.md
backend/api/app/: main.py
backend/api/app/routers/: images.py  robot.py
backend/shared/: README.md  pyproject.toml
backend/shared/bizbot_shared.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
backend/shared/bizbot_shared/core/: config.py
backend/shared/bizbot_shared/schemas/: photos.py
backend/shared/bizbot_shared/services/: gemini_scorer.py  photo_pipeline.py  photo_repo.py  supabase_storage.py
computer_vision/: comp_vision.py  requirements.txt  test_arduino.py
cv_output/: detection_log.json
frontend/: .env.example  package-lock.json  package.json  tailwind.config.js
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/admin/: page.tsx
frontend/app/api/upload/: route.ts
frontend/app/control/: page.tsx
frontend/app/gallery/: page.tsx
frontend/app/photobooth/: page.tsx
frontend/components/: hero-carousel.tsx  site-header.tsx  status-pill.tsx
